2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwm.c:
	Fix crash on server shutdown
	
2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.c:
	* winkeybd.h:
	* winwndproc.c:
	Fix simultanious presses of Left and Right Control and Shift keys.
	https://bugs.freedesktop.org/show_bug.cgi?id=3677

2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwm.c:
	Fix typo which broke window titles

2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	* winkeybd.c:
	Fix problem with fake Control press on Alt-Gr
	https://bugs.freedesktop.org/show_bug.cgi?id=3680
	https://bugs.freedesktop.org/show_bug.cgi?id=3497

	* InitOutput.c:
	Fix static declaration of winGetBaseDir

2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* winwindow.h:
	* winmultiwindowwm.c:
	* winscrinit.c:
	External windowmanagers could connect in multiwindow mode which lead
	to strange results with the internal windowmanager.

2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* *.c:
	Include xwin-config.h if HAVE_XWIN_CONFIG is defined
	Cleanup X11 includes handling
	Warning fixes
	
2005-06-30  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Pass serverClient instead of NULL to ConfigureWindow.
	This should fix a crash reported by Øyvind Harboe

2005-06-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winlayouts.h:
	Merge from CYGWIN
	Added layout "French (Canada)" as ca_enhanced 
	Added Czech (QWERTY) layout
	* winshaddnl.c:
	Merge from CYGWIN
	Print error code if winStoreColorsShadowDDNL fails

2005-06-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c:
	Fix crash reported by Øyvind Harboe

2005-06-03  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	* winblock.c:
	Backout last winRaiseWindow patch which caused stacking problems
